--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learnstorybook-design-system-template",
+  "name": "storybook-design-system",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,12 +15,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "build-storybook-docs": "build-storybook  --docs"
+    "build-storybook-docs": "build-storybook  --docs",
+    "test-storybook": "test-storybook",
+    "chromatic": "npx chromatic --project-token=7d7808458836"
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +40,16 @@
       }
     ]
   },
-  "babel": {},
+  "babel": {
+    "presets": [
+      [
+        "react-app",
+        {
+          "absoluteRuntime": false
+        }
+      ]
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -52,18 +63,31 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
     "@babel/preset-typescript": "^7.18.6",
+    "@storybook/addon-a11y": "^6.5.14",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
     "@storybook/addon-interactions": "^6.5.14",
     "@storybook/addon-links": "^6.5.14",
     "@storybook/builder-webpack4": "^6.5.14",
+    "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack4": "^6.5.14",
     "@storybook/node-logger": "^6.5.14",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.5.14",
+    "@storybook/test-runner": "^0.9.1",
     "@storybook/testing-library": "^0.0.13",
+    "auto": "^10.37.6",
     "chromatic": "^6.12.0",
+    "cross-env": "^7.0.3",
+    "jest": "27",
     "prettier": "^2.8.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "learnstorybook-design-system-template@0.1.0",
+  "main": "index.js",
+  "repository": "https://github.com/mttwhlly/learnstorybook-design-system.git",
+  "author": "matt whalley <matt@mattwhalley.com>",
+  "license": "MIT"
 }
