--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "chromatic": "^6.12.0",
     "cross-env": "^7.0.3",
     "jest": "27",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "storybook-addon-designs": "^6.3.1"
   },
   "readme": "ERROR: No README data found!",
   "_id": "learnstorybook-design-system-template@0.1.0",
